Added Book Appointment and Get all patients routes
